[tool.poetry]
name = "tasks"
version = "0.1.0"
description = ""
authors = ["Tyler Baur <tbaur@teuteberg.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.13.0"
tinydb = "^4.1.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
flake8 = "^3.8.3"
black = "^19.10b0"
flake8-black = "^0.2.0"
pytest-cov = "^2.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
